--- a/rust-patch-derive/Cargo.toml
+++ b/rust-patch-derive/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust-patch-derive"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [lib]
 proc-macro = true
