--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "rust-patch"
-authors = ["netthier <admin@netthier.net>"]
-description = "Patch structs with other structs"
-repository = "https://github.com/netthier/rust-patch"
-categories = ["no-std::no-alloc", "development-tools"]
-keywords = ["patch", "struct"]
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+authors.workspace = true
+description.workspace = true
+repository.workspace = true
+categories.workspace = true
+keywords.workspace = true
 
 [workspace]
 members = [".", "rust-patch-derive"]
@@ -16,6 +16,11 @@ members = [".", "rust-patch-derive"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+authors = ["netthier <admin@netthier.net>"]
+description = "Patch structs with other structs"
+repository = "https://github.com/netthier/rust-patch"
+categories = ["no-std::no-alloc", "development-tools"]
+keywords = ["patch", "struct"]
 
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
