--- a/rust-patch-derive/Cargo.toml
+++ b/rust-patch-derive/Cargo.toml
@@ -3,6 +3,11 @@ name = "rust-patch-derive"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+authors.workspace = true
+description.workspace = true
+repository.workspace = true
+categories.workspace = true
+keywords.workspace = true
 
 [lib]
 proc-macro = true
