--- a/rust-patch-derive/Cargo.toml
+++ b/rust-patch-derive/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "rust-patch-derive"
+description = "Derive macro implementation for rust-patch"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 authors.workspace = true
-description.workspace = true
 repository.workspace = true
 categories.workspace = true
 keywords.workspace = true
